fixed spacing around distribute image

--- a/css/styles.css
+++ b/css/styles.css
@@ -346,7 +346,7 @@ video {
 
 #steps {
     
-    padding-bottom: 2em;
+    padding-bottom: 3em;
     
 }
 
@@ -365,7 +365,7 @@ video {
 
 .step {
     
-    margin: 3em 0 2em 0;
+    margin: 3em 0 3em 0;
     
 }
 
